Removed deprecated methods.